--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="image_8ball">8 Balls Image</string>
+    <string name="magickBalls">Magic Balls</string>
+    <string name="ShakeIt">Shake To Know Your Future</string>
 </resources>
